ensure react logo does not spin off center

--- a/docs/theme-white/reason-react.css
+++ b/docs/theme-white/reason-react.css
@@ -5,7 +5,7 @@
 @media (min-width: 480px) {
   .header .logo {
     display: inline-block;
-    height: 18px;
+    height: 20px;
     margin-right: 5px;
     vertical-align: middle;
     width: 20px;
